--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
     "name": "shopping-cart",
     "version": "0.1.0",
+    "homepage": "http://gunesozdogan.github.io/shopping-cart",
     "private": true,
     "dependencies": {
         "@reduxjs/toolkit": "^1.9.2",
@@ -19,7 +20,9 @@
         "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
-        "eject": "react-scripts eject"
+        "eject": "react-scripts eject",
+        "predeploy": "npm run build",
+        "deploy": "gh-pages -d build"
     },
     "eslintConfig": {
         "extends": [
@@ -43,5 +46,8 @@
         "singleQuote": true,
         "tabWidth": 4,
         "arrowParens": "avoid"
+    },
+    "devDependencies": {
+        "gh-pages": "^5.0.0"
     }
 }
