--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "shopping-cart",
     "version": "0.1.0",
-    "homepage": "http://gunesozdogan.github.io/shopping-cart",
+    "homepage": "https://gunesozdogan.github.io/shopping-cart",
     "private": true,
     "dependencies": {
         "@reduxjs/toolkit": "^1.9.2",
